--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.15.4",
     "immutable": "^3.8.1",
     "react": "^15.6.1",
+    "react-css-modules": "^4.7.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router": "^3.0.2",
